--- a/app/index.html
+++ b/app/index.html
@@ -27,19 +27,25 @@
           <div class="navbar-header">
 
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation12312</span>
+              <span class="sr-only">Toggle navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">angular</a>
+            <a class="navbar-brand" href="#/">人人车工具管理</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Homesdfsd</a></li>
+              <li class="dropdown"><a href="javascript:" class="dropdown-toggle" data-toggle="dropdown">58</a>
+                <ul class="dropdown-menu menu-top">
+                  <li><a href="#/carsinfo">车源添加</a></li>
+                  <li><a href="#">车源信息</a></li>
+                  <li><a href="#">优先刷新</a></li>
+                </ul>
+              </li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
